--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,3 +4,16 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
+bevy = { version = "0.16.0", features = ["dynamic_linking"] }
+bevy-inspector-egui = "0.31.0"
+
+# for Linux
+[target.x86_64-unknown-linux-gnu]
+linker = "clang"
+rustflags = ["-C", "link-arg=-fuse-ld=lld"]
+
+# Optimizations
+[profile.dev]
+opt-level = 3
+[profile.dev.package."*"]
+opt-level = 3
