--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,8 @@ edition = "2024"
 [dependencies]
 bevy = { version = "0.16.0", features = ["dynamic_linking"] }
 bevy-inspector-egui = "0.31.0"
+rand = "0.9.1"
+symbolica = "0.16.0"
 
 # for Linux
 [target.x86_64-unknown-linux-gnu]
