experimental changes for web builds

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,7 +8,7 @@ edition = "2024"
 
 
 [dependencies]
-bevy = { version = "0.16.0", default-features = false, features = ["bevy_asset", "bevy_color", "bevy_core_pipeline", "bevy_pbr", "bevy_render", "bevy_sprite", "bevy_sprite_picking_backend", "bevy_state", "bevy_text", "bevy_ui", "bevy_ui_picking_backend"] }
+bevy = { version = "0.16.0", default-features = false, features = ["bevy_asset", "bevy_color", "bevy_core_pipeline", "bevy_pbr", "bevy_render", "bevy_state", "bevy_text", "bevy_ui", "bevy_ui_picking_backend"] }
 
 
 # bevy-inspector-egui = "0.31.0"
