--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,8 @@ edition = "2024"
 
 [dependencies]
 bevy = { version = "0.16.0" }
+bevy-inspector-egui = "0.31.0"
+bevy_egui = "0.34.1"
 rand = "0.9.1"
 
 # for Linux
