--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,9 +19,9 @@ rand = "0.9.1"
 # symbolica = "0.16.0"
 
 # for Linux
-# [target.x86_64-unknown-linux-gnu]
-# linker = "clang"
-# rustflags = ["-C", "link-arg=-fuse-ld=lld"]
+[target.x86_64-unknown-linux-gnu]
+linker = "clang"
+rustflags = ["-C", "link-arg=-fuse-ld=lld"]
 
 
 [target.wasm32-unknown-unknown]
