--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,7 @@ bevy = { version = "0.16.0", features = ["dynamic_linking"]}
 bevy-inspector-egui = "0.31.0"
 bevy_egui = "0.34.1"
 rand = "0.9.1"
+image = "0.25.6" # same as bevy uses.
 
 # for Linux
 [target.x86_64-unknown-linux-gnu]
