--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2024"
 [dependencies]
 bevy = { version = "0.16.0" }
 bevy-inspector-egui = "0.31.0"
+getrandom = { version = "0.3.3", features = ["wasm_js"] }
 bevy_egui = "0.34.1"
 rand = "0.9.1"
 
